--- a/src/ContosoTraders.Ui.Website/package.json
+++ b/src/ContosoTraders.Ui.Website/package.json
@@ -13,7 +13,7 @@
     "@azure/msal-browser": "^2.31.0",
     "@babel/helper-compilation-targets": "^7.13.16",
     "@babel/helper-regex": "^7.10.5",
-    "@fluentui/react": "^7.170.0",
+    "@fluentui/react": "^8.105.0",
     "@microsoft/applicationinsights-react-js": "^2.5.4",
     "@microsoft/applicationinsights-web": "^2.6.2",
     "@mui/core": "^5.0.0-alpha.54",
@@ -26,11 +26,13 @@
     "formik": "^2.2.9",
     "fs": "0.0.1-security",
     "history": "^4.9.0",
-    "i18next": "^15.0.6",
+    "html-parse-stringify": "^3.0.1",
+    "i18next": "^19.0.0",
     "izitoast": "^1.4.0",
     "material-ui-dropzone": "^3.5.0",
     "msal": "^1.4.10",
     "mui-file-dropzone": "^4.0.2",
+    "node-fetch": "^2.6.8",
     "office-ui-fabric-react": "^7.170.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
@@ -40,7 +42,7 @@
     "react": "^18.2.0",
     "react-a11y-dialog": "^4.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^9.0.10",
+    "react-i18next": "^12.1.4",
     "react-material-ui-carousel": "^3.4.2",
     "react-redux": "^6.0.0",
     "react-router": "^5.2.0",
@@ -48,7 +50,6 @@
     "react-s-alert": "^1.4.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.2",
-    "recompose": "^0.30.0",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
